Add the checkout actions modeul

--- a/.github/workflows/chi.yaml
+++ b/.github/workflows/chi.yaml
@@ -4,6 +4,7 @@ jobs:
  Explore-GitHub-Action:
   runs on: ubuntu-latest
   steps:
+   - uses: actions/checkout@v2
    - run: echo "the job was automatically triggered by a ${{ github.even_name }} event ."
    - run: python main.py
-   
+
